Hotfix fix cropped dropdown (#3)
* Fix video dropdown to modal

* Fix vtt dropdown to modal

* Fix srt dropdown to modal

* Add title to modal

* Fix modal width

* Fix modal height

--- a/popup.css
+++ b/popup.css
@@ -56,3 +56,14 @@ button:focus{
     color: #ffffff;
     word-break: break-word;
 }
+.modal-dialog-override {
+    max-width: 250px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.modal-content-override {
+    max-height: 350px!important;
+}
+.dropdown-item-override {
+    padding: .1rem 1.5rem;
+}
